--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="Notseen">
+            android:label="Unseen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
